--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="permission_check_dialog_title">App Permission Required</string>
     <string name="permission_check_dialog_message">This app requires \"Storage Permission\" to run properly.\n\nPlease tap the \"Settings\" button below and allow \"Storage\" access.</string>
     <string name="settings">Settings</string>
+    <string name="pause">pause</string>
+    <string name="channel_name">BaseChannel</string>
+    <string name="channel_id">channel_id</string>
 </resources>
